<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/standard_margin_5"
        android:layout_marginRight="@dimen/standard_margin_5"
        android:layout_marginTop="@dimen/standard_margin_10"
        android:background="@drawable/back_ground_gray_selector"
        card_view:cardCornerRadius="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageButton
                android:id="@+id/btnSaveArticle"
                android:layout_width="@dimen/size_for_button_save"
                android:layout_height="@dimen/size_for_button_save"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/standard_margin_10"
                android:layout_marginTop="@dimen/standard_margin_15"
                tools:ignore="RtlHardcoded" />


            <ImageView
                android:id="@+id/imgArticle"
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:layout_marginTop="@dimen/standard_margin_10"
                android:scaleType="centerCrop" />

            <hoangvuanhdeveloper.wordpress.com.rssofflinemoneylover.CustomView.TextViewPlus
                android:id="@+id/tvArticlePubDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_margin_5"
                android:layout_marginRight="@dimen/standard_margin_5"
                android:layout_marginTop="@dimen/standard_margin_5"
                android:ellipsize="end"
                android:text="@string/time_test"
                android:textColor="@color/arTimeUpLoadColor"
                android:textSize="@dimen/font_arTimeUpload"
                app:customFont="fonts/Roboto-Light.ttf"
                tools:ignore="PxUsage"

                />


            <hoangvuanhdeveloper.wordpress.com.rssofflinemoneylover.CustomView.TextViewPlus
                android:id="@+id/tvArTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_margin_5"
                android:layout_marginRight="@dimen/standard_margin_5"
                android:text="@string/title_test"
                android:textColor="@color/arTitleColor"
                android:textSize="@dimen/font_arTitle"
                android:textStyle="bold"
                card_view:customFont="fonts/Roboto-Medium.ttf" />

            <hoangvuanhdeveloper.wordpress.com.rssofflinemoneylover.CustomView.TextViewPlus
                android:id="@+id/tvArDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_margin_5"
                android:layout_marginRight="@dimen/standard_margin_5"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/content_test"
                android:textColor="@color/arContentColor"
                android:layout_marginBottom="@dimen/standard_margin_5"
                android:textSize="@dimen/font_arContent" />

            <hoangvuanhdeveloper.wordpress.com.rssofflinemoneylover.CustomView.TextViewPlus
                android:id="@+id/tvArLinkText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standard_margin_10"
                android:layout_marginLeft="@dimen/standard_margin_5"
                android:layout_marginRight="@dimen/standard_margin_5"
                android:text="@string/app_name"
                app:customFont="fonts/Roboto-Regular.ttf"
                android:visibility="gone"/>


        </LinearLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>